--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link rel="stylesheet" href="main.css">
-    <title>Document</title>
+    <title>JavaScript</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
@@ -17,8 +17,8 @@
         <div class="card text-bg-info" style="width: 18rem;">
             <img src="" class="card-img-top img" alt="">
             <div class="card-body">
-                <p class="product-text">smth</p>
-                <h3 class="price-text">0</h3>
+                <h3 class="product-text">Product Name</h3>
+                <p class="price-text">Product Price</p>
             </div>
           </div>
           <div class="search">
